--- a/Cutting Web/css/style.css
+++ b/Cutting Web/css/style.css
@@ -10,7 +10,7 @@ html,body{
 }
 a{
     text-decoration: none;
-}
+}       
 ul{
     list-style: none;
     margin: 0;
@@ -37,7 +37,7 @@ ul{
     display: block;
     clear: both;
 }
-.col-1-2,.col-1-3{
+.col-1-2,.col-1-3,.col-1-4{
     float: left;
     padding-left: 16px;
     padding-right: 16px;    
@@ -48,7 +48,9 @@ ul{
 .col-1-3{
     width: 33.333333%;
 }
-
+.col-1-4{
+    width: 25%; 
+}
 .hero .col-1-2{
     height: 100%;
 }
@@ -111,8 +113,6 @@ ul{
     color: #F68E13;
     font-size: 15px;
     background-color: #000000bd;
-    width: 444.31px;
-    height: 47px;
     line-height: 43px;
     padding: 0px 60px;
     letter-spacing: 0.5px;
@@ -149,20 +149,14 @@ ul{
     line-height: 24px;
 }
 
-.hero .card p{
-    font-size: 16px;
-    padding-top: 10px;
-    padding-left: 30px;
-}
-
 .hero .card i{
     padding: 10px 10px;
 }
 
 .hero .card .credit_card{
     position: relative;
-    top: -220px;
-    left: 530px;
+    top: -185px;
+    left: 230px;
 }
 
 
@@ -178,7 +172,6 @@ ul{
 }
 
 .hero .card{
-    background-color: #1B1C1E;
     height: 264.77px;
     padding-top: 3px;
 }
@@ -194,7 +187,16 @@ ul{
 
 .cmpt-4 .card{
     margin-bottom: 35px;
+    background-color: #1B1C1E;
 }
+
+.cmpt-7 .card{
+    width: 390px;
+    height: 390px; 
+    margin-top: 45px;
+}
+
+
 
 /* cmpt */
 .cmpt-1{
@@ -226,8 +228,12 @@ ul{
     color: #000000;
 }
 
+.cmpt-2 a{
+    padding: 10px;
+}
+
 .cmpt-3 .card .big{
-    font-size: 18px;
+    font-size: 22px;
 }
 
 .cmpt-3 .card .medium{
@@ -235,19 +241,19 @@ ul{
 }
 
 .cmpt-3 .card .small{
-    font-size: 10px;
+    font-size: 20px;
 }
 
 .cmpt-4 .card .big{
-    font-size: 35px;
+    font-size: 30px;
     font-weight:700;
     right: -250px;
+    top: 10px;
 }
 
 .cmpt-4 .card .medium{
     font-size: 17px;
 }
-
 
 .cmpt-4 .card .small{
     font-size: 16px;
@@ -257,6 +263,102 @@ ul{
     top: 80px;
     left: 15px;
     color: #e79c41 !important;
+}
+
+.cmpt-4 .card p{
+    font-size: 16px;
+    padding-top: 10px;
+    padding-left: 30px;
+}
+
+.cmpt-5 .card .small{
+    font-size: 12px;
+}
+
+.cmpt-5 .card .medium{
+    font-size: 17px;
+}
+
+.cmpt-5 .card p{
+    padding-left: 0px !important;
+    margin: 5px;
+}  
+
+.cmpt-5 .card i{
+    padding-left: 0px !important;
+    padding-right: 60%;
+}
+
+.cmpt-5 a{
+    font-size: 50px !important;
+    color: #EEEEEE;
+    font-weight:bold;   
+}
+
+.hero .background{
+    height: 377px;
+    background-image: url(../images/pexels-joyston-judah-933054.jpg);
+    background-size:cover;
+    background-repeat: no-repeat;
+}
+
+.cmpt-6 .big{       
+    font-size: 40px !important;
+    color: #EEEEEE;
+    font-weight:bold;
+    text-align:center;
+    padding-top: 60px;
+}
+
+.cmpt-6 .small{
+    font-size: 16px;
+    color: #EEEEEE;
+    font-weight:bold;
+    text-align:center;
+    padding-top: 15px;
+    height: 50px;
+    background-color: rgba(255, 235, 105, .1)
+}
+
+.cmpt-7{
+    height: 1150px;
+}
+
+
+.cmpt-7 img{
+    background-size:cover;
+    background-repeat: no-repeat;
+    width: 100%;
+}
+
+/* 能量條 */
+
+.progress-item {
+    height: 30px;
+    display: flex;
+    align-items: center;
+}
+
+.progress-container {
+  position: relative;
+  width: 380px;
+  height: 5px;    
+}
+
+.progress {
+    width: 100%;
+    height: 5px;
+    background-color: #e0e0e0;
+    border-radius: 6px;
+}
+
+.progress-complete {
+    position: absolute;
+    height: 5px;
+    border-radius: 6px;
+    background-color: #e79c41   ;
+    left: 0;
+    top: 0;
 }
 
 .white{
