--- a/20230622CuttingWeb/css/style.css
+++ b/20230622CuttingWeb/css/style.css
@@ -77,8 +77,8 @@ a{
 @media screen and (max-width: 576px){
     .container{
         max-width: 540px;
-        padding-left: 100px;
-        padding-right: 100px;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 }
 .row{
@@ -168,6 +168,20 @@ a{
         width: 50%;
     }
     .col-sm-12{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 484px){
+    .col-xs-3{
+        width: 25%;
+    }
+    .col-xs-4{
+        width: 33.3333333%;
+    }
+    .col-xs-6{
+        width: 50%;
+    }
+    .col-xs-12{
         width: 100%;
     }
 }
@@ -276,6 +290,8 @@ a{
     flex: auto;
     align-items: center;
     justify-content: flex-end;
+
+    /* display: none; */
 }
 .navbar .nav .nav-item{
     display: inline-block;
@@ -304,6 +320,81 @@ a{
 .navbar .nav .nav-link:hover{
     color: #f68e13;
 }
+
+/* close-btn */
+#offcanvas-menu .close-btn{
+    width: 48px;
+    height: 48px;
+}
+#offcanvas-menu .close-btn span{
+    width: 25px;
+    height: 2px;
+    position: absolute;
+    background-color: #fff;
+    top: 50%;
+    left: 50%;
+}
+#offcanvas-menu .close-btn span:nth-child(1){
+    transform: translate(-50%,-50%) rotate(45deg);
+}
+#offcanvas-menu .close-btn span:nth-child(2){
+    transform: translate(-50%,-50%) rotate(-45deg);
+}
+#offcanvas-menu{
+    width: 300px;
+    height: 100%;
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-start;
+    right: 0;
+    display: none;
+    background-color: #FFF;
+}
+#offcanvas-menu .brand{
+    background-color: #181718;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 85px;
+}
+#offcanvas-menu .image{
+    display: block;
+    width: 225px;
+    height: 45px;
+    background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/logo6.png);
+    background-size: cover;
+}
+#offcanvas-menu #search{
+    border: 1px solid #ced4da;
+    height: 38px;
+    width: 210px;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    border-radius: 0.25rem;
+}
+#offcanvas-menu .nav-item{
+    padding-top: 25px;
+    transition: all .3s;
+}
+#offcanvas-menu .nav-link{
+    color: #9da0a3;
+}
+#offcanvas-menu .nav-link:hover{
+    color: #e79c41;
+}
+#popup-menu{
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    width: 100%;
+}
+#offcanvas-menu:target{
+    display: flex;
+}
+
 
 /* menu-toggle */
 .menu-toggle{
@@ -449,14 +540,14 @@ a{
 @media screen and (max-width: 1200px){
     .about .about-preview{
         padding-top: 80px;
-        padding-left: 70px;
+        /* padding-left: 70px; */
     }
 }
-@media screen and (max-width: 992px){
+/* @media screen and (max-width: 992px){
     .about .about-preview{
         padding-right: 70px;
     }
-}
+} */
 .about .about-preview h4{
     font-size: 23px;
     line-height: 23px;
@@ -495,6 +586,9 @@ a{
     margin-top: 30px;
     margin-right: 0;
     margin-left: 0;
+}
+.about .about-preview .btn:hover{
+    color: #181718;
 }
 .about .about-preview i{
     margin: 0 5px;
@@ -618,7 +712,7 @@ a{
     transition: all 0.3s;
 }
 .services .services-preview:hover{
-    margin-bottom: 10px;
+    margin-top: 10px;
 }
 .services .services-preview i{
     font-size: 36px;
@@ -909,6 +1003,11 @@ a{
     line-height: 1;
     text-align: center;
     border-radius: 100px;
+    border: 1px solid #fff;
+}
+.works .btn:hover{
+    background-color: #181718;
+    border: 1px solid #181718;
 }
 
 /* Clients */
